Correcting a input size issue on mobile screen sizes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,6 +394,7 @@ body.modal-open {
 
 .search-form input {
 	line-height: normal;
+	max-width: 95%;
 }
 
 .clear-search-icon {
